feat: add new field on planet
